--- a/workspaceNastya.html
+++ b/workspaceNastya.html
@@ -15,6 +15,9 @@
 				О студии
 			</div>
 			<div class="menu__item">
+				Портфолио
+			</div>
+			<div class="menu__item">
 				Услуги
 			</div>
 			<div class="menu__item">
