Последняя версия со старого компа

--- a/workspaceNastya.html
+++ b/workspaceNastya.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 	<header class="header block">
-		<img class ="logo" src="logo.png.jpg">
+		<img class ="logo" src="img/logo.png">
 		<div class="menu">
 			<div class="menu__item">
 				Главная
@@ -27,11 +27,13 @@
 		<div class="name">ENIGMA</div>
 	</header>
 	<div class="main-block block">
+
 		<div class="main-block__main-text">
 			Дизайн интерьера
 		</div>
 		<div class="main-block__text">
-			Значимость интерьера в вашей квартире <br> очень высока.
+			Интерьер в вашей квартире - <br> ваше лицо.
+		</div>
 			<div class="buttons">
 			<div class="main-block__button1 button">
 				Подробнее
@@ -40,6 +42,30 @@
 				Заказать
 				</div>
 			</div>
+		
+	</div>
+	<div class="welcome-block block">
+		<div class="welcome__button button">Приветствуем в enigma
+		</div>
+		<div class="welcome__text text">Каждый наш заказчик получит<br>наивысший уровень обслуживания. Мы воплотим вашу<br> мечту в реальность за кратчайший срок.</div>
+		<img src="img/kwlogo.png">
+		<div class="welcome__advantage">
+			<div class="welcome__quality">
+				<img src="img/icon-1.png">
+				<div class="welcome__quality-text">
+					
+				</div>
+			</div>
+			<div class="welcome__awards">
+				<img src="img/icon-2.png">
+				<div class="welcome__awards-text">
+				</div>
+			</div>
+			<div class="welcome__access">
+				<img src="img/icon-3.png">
+				<div class="welcome__access-text">
+			</div>
+
 		</div>
 	</div>
 </body>
